--- a/src/assets/jerry.css
+++ b/src/assets/jerry.css
@@ -75,7 +75,7 @@ input[type="text"]:focus {
   top: 30px;
 }
 
-.image-wrapper:nth-child(2) {
+/* .image-wrapper:nth-child(2) {
   top: 50px;
 }
 
@@ -88,7 +88,7 @@ input[type="text"]:focus {
 }
 .image-wrapper:nth-child(5) {
   top: 60px;
-}
+} */
 
 #section3 {
   /* background-image: url("images//jerrybg.jpeg"); */
