--- a/src/assets/jerry.css
+++ b/src/assets/jerry.css
@@ -57,16 +57,16 @@ input[type="text"]:focus {
 
 .image-wrapper {
   position: relative;
-  animation: moveUp 15s linear infinite;
+  animation: moveUp 60s linear infinite;
   overflow: hidden;
 }
 
 @keyframes moveUp {
   0% {
-    transform: translateY(50vh);
+    transform: translateY(0);
   }
   100% {
-    transform: translateY(-50vh);
+    transform: translateY(-100%);
   }
 }
 
